--- a/server/config/.env
+++ b/server/config/.env
@@ -1,1 +1,1 @@
-DB_STRING=mongodb+srv://filipecx:f1a2m3j4@cluster0.avjncrf.mongodb.net/TodoNetwork?retryWrites=true&w=majority
+DB_STRING=mongodb+srv://filipecx:f1a2m3j4@cluster0.avjncrf.mongodb.net/recipes?retryWrites=true&w=majority
